add package.json build:clean script

--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -23,5 +23,11 @@
 p {
   display: -ms-flexbox;
   display: flex;
+  color: red;
+}
+
+article {
+  display: -ms-flexbox;
+  display: flex;
 }
 /*# sourceMappingURL=style.prefixed.css.map */
