--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,32 @@
-.panel-body { margin: 0 auto; }
+.panel-body {
+  margin: 0 auto;
+}
 
-@media (min-width: 768px) { .panel-body { width: 55%; } }
+@media (min-width: 768px) {
+  .panel-body {
+    width: 55%;
+  }
+}
 
-@media (min-width: 992px) { .panel-body { width: 45%; } }
+@media (min-width: 992px) {
+  .panel-body {
+    width: 45%;
+  }
+}
 
-@media (min-width: 1200px) { .panel-body { width: 35%; } }
+@media (min-width: 1200px) {
+  .panel-body {
+    width: 35%;
+  }
+}
 
-p { display: -ms-flexbox; display: flex; }
+p {
+  display: flex;
+  color: red;
+}
+
+article {
+  display: flex;
+}
+
+/*# sourceMappingURL=style.css.map */
