add package.json watch:sassprefixer script

--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,7 @@
 }
 
 p {
-  display: flex;
-  color: red;
-}
-
-article {
+  display: -ms-flexbox;
   display: flex;
 }
-
 /*# sourceMappingURL=style.css.map */
